# blackbase

./: CMakeLists.txt  README.md
cmake/: BlackBaseConfig.cmake.in  asm.cmake  compiled.cmake  disassembler.cmake  header_only.cmake  install.cmake  modes.cmake  tests.cmake  throws.cmake  zydis.cmake
include/blackbase/: blackbase.hpp  common.hpp  function_inl_win.hpp  functional.hpp  internal.hpp  process.hpp  string_convert.hpp  unwind_walker.hpp  windows.hpp  xorstr.hpp
include/blackbase/caller/: indirect_call.hpp
include/blackbase/cave/: cave.hpp  cave_finder.hpp
include/blackbase/detail/cave/: cave_finder_impl.hpp  cave_finder_impl_win.hpp  cave_impl.hpp
include/blackbase/detail/disassembler/: disassembler_impl.hpp  dissassembler_zydis.hpp  instruction_impl_zydis.hpp  operand_impl_zydis.hpp  zydis_status.hpp
include/blackbase/detail/hooking/: hook_manager_impl.hpp  vtable_impl.hpp
include/blackbase/detail/pattern/: match_impl.hpp  matcher_impl.hpp  matcher_impl_safe_win.hpp  pattern_impl.hpp
include/blackbase/detail/util/: string_impl.hpp
include/blackbase/disassembler/: disassembler.hpp  instruction.hpp  operand.hpp
include/blackbase/hooking/: hook.hpp  hook_manager.hpp  vtable.hpp
include/blackbase/internal/: assert.hpp  constexpr.hpp  debug.hpp  exports.hpp  forceinline.hpp  linkage.hpp  log.hpp  system.hpp
include/blackbase/internal/defs/: windows.hpp
include/blackbase/logger/: logger.hpp  logger_instance.hpp  sink.hpp
include/blackbase/logger/sinks/: file_sink.hpp
include/blackbase/obfuscation/: opcode.hpp  value.hpp
include/blackbase/pattern/: match.hpp  matcher.hpp  pattern.hpp
include/blackbase/util/: string.hpp
include/blackbase/xor/: key.hpp
src/: blackbase.cpp  indirect_call.asm
test/: export_lib.cpp  export_test.cpp  functional_test.cpp  functional_thunk_test.cpp  library_test.cpp  logger_test.cpp  matcher_test.cpp  modules_tester.cpp  pattern_test.cpp  pattern_test_new.cpp  rpm_test.cpp  rpm_tester.cpp  unwind_walker_test.cpp
tests/: cave_finder_test.cpp  disassembler_test.cpp  indirect_call.cpp  library_test.cpp  matcher_test.cpp  pattern_test.cpp  xor_test.cpp
